Rework for assessments & start of metrics revamp